# bookrss

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  Readme.md  Rocket.toml
migrations/2018-02-17-010608_initial/: down.sql  up.sql
src/: database.rs  main.rs
src/cli/: database.rs  ffmpeg.rs  import.rs  main.rs
src/lib/: database.rs  lib.rs  macros.rs  settings.rs
src/lib/models/: audiobook.rs  audiobook_model.rs  author.rs  author_model.rs  mod.rs  narrator_model.rs  part_model.rs  series.rs  series_model.rs  speaker_model.rs
src/models/: audiobook.rs  part.rs  speaker.rs
src/server/: config.rs  database.rs  main.rs  server.rs
src/server/views/: audiobook.rs  audiobook_rss.rs  author.rs  cover.rs  mod.rs  narrator.rs  part.rs  series.rs  series_rss.rs  speaker.rs
src/views/: audiobook.rs  author.rs  part.rs  series.rs  speaker.rs
