[package]
name = "bookrss"
version = "0.1.0"
authors = ["Johannes Schriewer <hallo@dunkelstern.de>"]

[[bin]]
name = "bookrssd"
path = "src/server/main.rs"

[[bin]]
name = "bookrss"
path = "src/cli/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = { version = "0.3.6", default-features = false, features = ["json", "tera_templates"] }

diesel = { version = "1.1.0", features = ["sqlite", "chrono"] }
r2d2-diesel = "1.0"
r2d2_sqlite = "0.5.0"
r2d2 = "0.8"

chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.30.0"
config = "0.8.0"
shellexpand = "1.0.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

rss = "1.3.0"
slug = "0.1.2"
